set the box shadow to -20px 0 30px 0 to see if it fixes horizontal scroll issue on mobile.

--- a/app/scss/navbar.scss
+++ b/app/scss/navbar.scss
@@ -3,7 +3,7 @@
 }
 
 #top-nav {
-  box-shadow: 0 0 30px 0 $blue;
+  box-shadow: -20px 0 30px 0 $blue;
 }
 
 .navbar-default {
